<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="emailEditText" type="id" />
    <item name="passwordEditText" type="id" />
    <item name="loginButton" type="id" />
    <item name="signUpButton" type="id" />
    <item name="progressBar" type="id" />
    <item name="mapView" type="id"  />

</resources>